--- a/snap-web-routes-demo.cabal
+++ b/snap-web-routes-demo.cabal
@@ -19,21 +19,21 @@ Executable snap
   main-is: Main.hs
 
   Build-depends:
-    base >= 4 && < 5,
-    bytestring >= 0.9.1 && < 0.10,
-    data-lens >= 2.0.1 && < 2.1,
-    data-lens-template >= 2.1 && < 2.2,
-    heist >= 0.8 && < 0.9,
-    MonadCatchIO-transformers >= 0.2.1 && < 0.3,
-    mtl >= 2 && < 3,
+    base                      >= 4.4     && < 5,
+    lens                      >= 3.7.6   && < 4.2,
+    bytestring                >= 0.9.1   && < 0.11,
+    heist                     >= 0.13    && < 0.14,
+    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
+    mtl                       >= 2       && < 3,
     web-routes,
     web-routes-th,
-    snap == 0.8.*,
-    snap-core   == 0.8.*,
-    snap-server == 0.8.*,
-    text >= 0.11 && < 0.12,
-    time >= 1.1 && < 1.5,
-    xmlhtml == 0.1.*
+    snap                      >= 0.13    && < 0.14,
+    snap-core                 >= 0.9     && < 0.11,
+    snap-server               >= 0.9     && < 0.11,
+    snap-loader-static        >= 0.9     && < 0.10,
+    text                      >= 0.11    && < 1.2,
+    time                      >= 1.1     && < 1.5,
+    xmlhtml                   >= 0.1
 
   if flag(development)
     cpp-options: -DDEVELOPMENT
